<resources>
    <string name="app_name">2013 E. Canada Journal Search</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">Welcome to Journal Search. Start by searching for a term in the correct field. Select the term once it appears in the dropdown box.</string>
    <string name="placeholderText">PlaceHolder Text</string>
    <string name="collectiveTitle">Collective Title</string>
    <string name="subordinateTitle">Subordinate Title</string>
    <string name="author">Author</string>
    <string name="editor">Editor</string>
    <string name="publisher">Publisher</string>
    <string name="city">City</string>
    <string name="pageStart">Start Page</string>
    <string name="pageEnd">End Page</string>
    <string name="issue">Issue</string>
    <string name="year">Year</string>
    <string name="volume">Volume</string>
    <string name="docType">Document Type</string>
    <string name="doi">DOI</string>
    <string name="url">URL</string>

<string-array name="data">
    <item>{"Issue / Num\u00e9ro": "1-2", "Title, Analytic / Titre, Analytique": "\"The Rainmakers\": the Meteorological Service of Canada and post-war weather modification research", "Page end / Derni\u00e8re Page": "37", "URL / Adresse URL   ": "", "Publisher / Maison d'\u00e9dition": "", "City / Ville": "", "Year / Ann\u00e9e": "2013", "Page start / Premi\u00e8re Page": "5", "Document Type / Type de document": "Article", "DOI / Identificateur d'objet num\u00e9rique": "10.7202/1013979ar", "Title, Collective / Titre, Collectif": "Scientia Canadensis", "Editors / \u00c9diteurs": "", "Title - Subordinate / Titre - Subalterne": "", "Volume - Chapter / Volume - Chapitre ": "35", "\ufeff\"Authors / Auteurs\"": "Wallace, M.L."}</item>
</string-array>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
</resources>
